--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ images{
     bottom: 0;
     transform: translateX(-13%);
     transition: bottom 1s, left 1s;
+    padding: auto;
 }
 .images .picture{
     bottom: 10px;
@@ -100,9 +101,7 @@ images{
 .images:hover .picture{
     left:45%
 }
-.images:hover .ppoint{
-    right:45%
-}
+
 .hero nav img {
     width: 50%
 }
